--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
 </head>
 <body>
     <h2>屏幕</h2>
-    <video id="screen" width="30%" height="auto" autoplay></video>
+    <img src="" alt="">
     <script>
         const ws = new WebSocket("ws://127.0.0.1:8080")
-        ws.binaryType = "arraybuffer"
-        ws.onmessage = (event) =>{
-            console.log(event)
-            const videoBlob = new Blob([event.data],{type:"video/mjpeg"})
-            const videoURL = URL.createObjectURL(videoBlob)
-            const videoElement = document.getElementById("screen")
-            videoElement.src = videoURL
-            videoElement.onended = () => URL.revokeObjectURL(videoURL)
+        const img = document.querySelector("#img")
+
+        const chunks = []
+        ws.onopen = ()=>{
+            console.log("connected")
         }
+        ws.addEventListener("message",(event)=>{
+            // console.log("已接受",chunks)
+            chunks.push(event.data)
+            const blob = new Blob(chunks)
+            const url = URL.createObjectURL(blob)
+            img.src = url
+            chunks.pop()
+        })
+        
         ws.onclose = () =>{
             console.log("connection closed")
         }
